import javax.swing.*;

public class Main {
    public static void main(String[] args) {
        SwingUtilities.invokeLater(() -> {
            Practica visualizer = new Practica();
            visualizer.setVisible(true);
        });
    }
}
