@startuml

class practica.Practica {
    - arr: int[]
    - delay: int
    + Practica()
    - selectionSort(arr: int[]): void
    - binarySearch(arr: int[], target: int): void
    - updateValue(index: int, newValue: int): void
    - valueExists(value: int): boolean
    - deleteValue(value: int): void
    - sleep(delay: int): void
}

class practica.Arreglo {
    + static buscarSequencial(int, int[]): int
    + static llenarVector(int, int[]): void
    + static mostrar(int, int[]): String
}

class practica.Main {
    + main(String[]) : void
}
Practica --> Arreglo : uses
Practica --> java.lang.ArrayList : uses
Practica --> java.util.Random : uses
Practica --> java.Integer.Integer : uses
Practica --> java.lang.Thread : uses
Main --> Practica : uses
@enduml
